Bug 121936 - GTK3 text does not display in slideshows if hardware acceleration is enabled
Summary: GTK3 text does not display in slideshows if hardware acceleration is enabled
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
6.3.0.0.alpha0+
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:6.3.0 target:6.2.0.1
Keywords: bibisected, regression
: 121722 (view as bug list)
Depends on:
Blocks: GTK3
  Show dependency treegraph
 
Reported: 2018-12-06 09:11 UTC by Elmar
Modified: 2019-01-02 14:18 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
source doc (92.45 KB, application/vnd.oasis.opendocument.presentation)
2018-12-06 09:16 UTC, Elmar
Details
page in edit mode (331.21 KB, image/png)
2018-12-06 09:16 UTC, Elmar
Details
presentation mode in v6.3 (and v6.2) (48.74 KB, image/png)
2018-12-06 09:17 UTC, Elmar
Details
presenttaion mode in v6.1 (as should be) (212.30 KB, image/png)
2018-12-06 09:17 UTC, Elmar
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Elmar 2018-12-06 09:11:57 UTC
Description:
text in text box does not display

Steps to Reproduce:
1. open document
2. create text box
3. start presentation

Actual Results:
bullets display, but no text

Expected Results:
should display


Reproducible: Always


User Profile Reset: No



Additional Info:
[Information automatically included from LibreOffice]
Locale: en-US
Module: PresentationDocument
[Information guessed from browser]
OS: Linux (All)
OS is 64bit: yes

Version: 6.3.0.0.alpha0+
Build ID: e4c2d0bb57ab8ea8f5c400d103d01376b8140f22
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-30_21:37:10
Locale: en-GB (en_ZA.UTF-8); UI-Language: en-US
Calc: threaded

Same is true in v6.2 alpha

works fine in 
Version: 6.1.3.2
Build ID: 1:6.1.3~rc2-0ubuntu0.18.04.2
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
Locale: en-GB (en_ZA.UTF-8); Calc: group threaded
Comment 1 Elmar 2018-12-06 09:16:02 UTC
Created attachment 147312 [details]
source doc
Comment 2 Elmar 2018-12-06 09:16:28 UTC
Created attachment 147313 [details]
page in edit mode
Comment 3 Elmar 2018-12-06 09:17:00 UTC
Created attachment 147314 [details]
presentation mode in v6.3 (and v6.2)
Comment 4 Elmar 2018-12-06 09:17:31 UTC
Created attachment 147315 [details]
presenttaion mode in v6.1 (as should be)
Comment 5 Elmar 2018-12-06 09:21:23 UTC
Comment on attachment 147313 [details]
page in edit mode

sorry, this is how it displays in v6.1
Comment 6 Elmar 2018-12-06 09:22:23 UTC
Comment on attachment 147315 [details]
presenttaion mode in v6.1 (as should be)

and this is how it displays in edit mode - v6.1; v6.2 and v6.3
Comment 7 Vera Blagoveschenskaya 2018-12-06 09:33:18 UTC
Reproduced for GTK3

Version: 6.3.0.0.alpha0+
Build ID: e4c2d0bb57ab8ea8f5c400d103d01376b8140f22
CPU threads: 1; OS: Linux 4.14; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-30_21:37:10
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded

DO NOT reproduced for KDE5

Version: 6.3.0.0.alpha0+
Build ID: e4c2d0bb57ab8ea8f5c400d103d01376b8140f22
CPU threads: 1; OS: Linux 4.14; UI render: default; VCL: kde5; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2018-11-30_21:37:10
Locale: ru-RU (ru_RU.UTF-8); UI-Language: en-US
Calc: threaded
Comment 8 Caolán McNamara 2018-12-06 10:20:47 UTC
==12720==    at 0x391B16CA: void std::__insertion_sort<__gnu_cxx::__normal_iterator<SystemGlyphData*, std::vector<SystemGlyphData, std::allocator<SystemGlyphData> > >, __gnu_cxx::__ops::_Iter_comp_iter<bool (*)(SystemGlyphData const&, SystemGlyphData const&)> >(__gnu_cxx::__normal_iterator<SystemGlyphData*, std::vector<SystemGlyphData, std::allocator<SystemGlyphData> > >, __gnu_cxx::__normal_iterator<SystemGlyphData*, std::vector<SystemGlyphData, std::allocator<SystemGlyphData> > >, __gnu_cxx::__ops::_Iter_comp_iter<bool (*)(SystemGlyphData const&, SystemGlyphData const&)>) (stl_algo.h:1847)
==12720==    by 0x391AF952: __final_insertion_sort<__gnu_cxx::__normal_iterator<SystemGlyphData*, std::vector<SystemGlyphData> >, __gnu_cxx::__ops::_Iter_comp_iter<bool (*)(const SystemGlyphData&, const SystemGlyphData&)> > (stl_algo.h:1890)
==12720==    by 0x391AF952: __sort<__gnu_cxx::__normal_iterator<SystemGlyphData*, std::vector<SystemGlyphData> >, __gnu_cxx::__ops::_Iter_comp_iter<bool (*)(const SystemGlyphData&, const SystemGlyphData&)> > (stl_algo.h:1971)
==12720==    by 0x391AF952: sort<__gnu_cxx::__normal_iterator<SystemGlyphData*, std::vector<SystemGlyphData> >, bool (*)(const SystemGlyphData&, const SystemGlyphData&)> (stl_algo.h:4866)
==12720==    by 0x391AF952: cairocanvas::TextLayout::draw(std::shared_ptr<_cairo> const&, OutputDevice&, Point const&, com::sun::star::rendering::ViewState const&, com::sun::star::rendering::RenderState const&) const (cairo_textlayout.cxx:324)
==12720==    by 0x3919C6D8: cairocanvas::CanvasHelper::drawTextLayout(com::sun::star::rendering::XCanvas const*, com::sun::star::uno::Reference<com::sun::star::rendering::XTextLayout> const&, com::sun::star::rendering::ViewState const&, com::sun::star::rendering::RenderState const&) (cairo_canvashelper_text.cxx:314)
==12720==    by 0x39180D6E: non-virtual thunk to canvas::CanvasBase<cairocanvas::CanvasBitmapSpriteSurface_Base, cairocanvas::CanvasHelper, osl::Guard<osl::Mutex>, cppu::OWeakObject>::drawTextLayout(com::sun::star::uno::Reference<com::sun::star::rendering::XTextLayout> const&, com::sun::star::rendering::ViewState const&, com::sun::star::rendering::RenderState const&) (Reference.hxx:110)
Comment 9 Caolán McNamara 2018-12-06 10:30:24 UTC
commit e194f597ae5882e1cda2cac2925577fff609f101
Author: Jan-Marek Glogowski <glogow@fbihome.de>
Date:   Sun Sep 30 16:07:16 2018 +0200

    Change GlyphItem::nFallbackLevel to font instance

looks suspicious to me wrt the unused final argument of GenericSalLayout::GetNextGlyph
Comment 10 Caolán McNamara 2018-12-06 10:37:14 UTC
https://gerrit.libreoffice.org/#/c/64698/
Comment 11 Caolán McNamara 2018-12-06 10:38:31 UTC
*** Bug 121722 has been marked as a duplicate of this bug. ***
Comment 12 Commit Notification 2018-12-06 14:11:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/+/1c4810f804e19d2246f6976cdfdb54e474194843%5E%21

Resolves: tdf#121936 uninitialized value used

It will be available in 6.3.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 13 Commit Notification 2018-12-06 14:30:27 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-6-2":

https://git.libreoffice.org/core/+/8e409fb74b23c053effda4c892624548acc68903%5E%21

Resolves: tdf#121936 uninitialized value used

It will be available in 6.2.0.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 14 BogdanB 2019-01-02 14:18:00 UTC
It is rendered ok on

Version: 6.3.0.0.alpha0+
Build ID: be8897d9c63a77b223a9c0aed1d2eb689e0e0082
CPU threads: 4; OS: Linux 4.15; UI render: default; VCL: gtk3; 
TinderBox: Linux-rpm_deb-x86_64@86-TDF, Branch:master, Time: 2019-01-02_04:49:04
Locale: ro-RO (ro_RO.UTF-8); UI-Language: en-US
Calc: threaded