Resolves: tdf#121936 uninitialized value used

since...

commit e194f597ae5882e1cda2cac2925577fff609f101
Date:   Sun Sep 30 16:07:16 2018 +0200

    Change GlyphItem::nFallbackLevel to font instance

Change-Id: I14b40a63cd48ef527e76e15af8f421ce48cce769